bugfixes as per client request. shuffle around product single layout, zindex for main menu dropdown, relevanssi for granular control of search. image alignment classes

--- a/wp-content/themes/FoundationPress/assets/scss/components/_disabled.scss
+++ b/wp-content/themes/FoundationPress/assets/scss/components/_disabled.scss
@@ -7,7 +7,7 @@
         left:0;
         top:0;
         bottom:0;
-        z-index:99999;
+        z-index:9;
         background:rgba(252, 252, 252, 0.75) none repeat scroll 0% 0%;
         display: flex;
         flex-direction: row;
