--- a/wp-content/themes/FoundationPress/assets/scss/global/_wp-overrides.scss
+++ b/wp-content/themes/FoundationPress/assets/scss/global/_wp-overrides.scss
@@ -11,3 +11,11 @@ p.wp-caption-text{
   color: #666;
   padding:rem-calc(10) 0;
 }
+
+///img alignment classes as used by CMS editor
+img.alignright {float:right; margin:0 0 1em 1em}
+img.alignleft {float:left; margin:0 1em 1em 0}
+img.aligncenter {display: block; margin-left: auto; margin-right: auto}
+a img.alignright {float:right; margin:0 0 1em 1em}
+a img.alignleft {float:left; margin:0 1em 1em 0}
+a img.aligncenter {display: block; margin-left: auto; margin-right: auto}
